--- a/src/compnents/Home/index.css
+++ b/src/compnents/Home/index.css
@@ -18,6 +18,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    position: static;
 }
 .hh1{
     font-size: 35px;
@@ -104,7 +105,7 @@ p{
     padding: 30px;
     gap: 30px;
     padding-top:100px;
-    justify-content: space-between;
+    justify-content: space-around;
     scroll-behavior: smooth;
 }
 .h1{
@@ -163,9 +164,70 @@ p{
     justify-content: space-between;
     align-items: center;
     padding: 30px;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+.vd1{
+    display: none;
 }
 .con{
     display: flex;
     align-items: center;
     margin-bottom: 20px;
+}
+
+
+@media(max-width:800px){
+    .live-section{
+        flex-direction: column;
+        align-items: center;
+    }
+    .live-heading{
+        font-size: 26px;
+    }
+    .img-l{
+        width: 190px;
+    }
+    .hh1{
+        font-size: 29px;
+    }
+    .icon{
+        font-size: 49px;
+        padding: 0px;
+        margin: 0px;
+    }
+    .h1{
+        font-size: 22px;
+        padding-top: 12px;
+    }
+    .features-section{
+        width: 100%;
+    }
+    .live-section{
+        padding-top: 50px;
+    }
+    .h3{
+        font-size: 32px;
+    }
+    .gallery-section{
+        flex-direction: column;
+        gap: 30px;
+        padding: 0px;
+        padding-top: 20px;
+    }
+    .services{
+        gap: 20px;
+    }
+    .img1{
+        width: 90%;
+    }
+    .pp{
+        text-align: center;
+    }
+    .vd{
+        display: none;
+    }
+    .vd1{
+        display: block;
+    }
 }
